# contra

./: .gitignore  README.md  modules.sh  pyproject.toml  test.ipynb
src/contra/: _ArrayReorder.py  _L_star.py  _ParticleType.py  __about__.py  __init__.py  _shared_memory_arrays.py  _stopwatch.py  _wrapped_distance.py
src/contra/_config/: __init__.py
src/contra/_scripts/: check_eagle_data.py  contra.py  contra_run.py  contra_run_forwards.py  contra_run_forwards_mpi.py  contra_setup.py  easy_python_sbatch.py  generate_particle_filter.py  plot_cumulitive_particles.py  plot_particle_histograms.py  plot_recovered_line_of_sight.py  plot_temp_density.py  plot_temp_density_all_particles.py  recover_EAGLE_los_ids.py  test_mpi.py
src/contra/io/: _CatalogueBase.py  _CatalogueSOAP.py  _CatalogueSUBFIND.py  _EAGLE.py  _LineOfSightBase.py  _LineOfSightEAGLE.py  _LineOfSightSWIFT.py  _Output_Objects.py  _Output_Objects__forwards.py  _ParticleFilter.py  _SWIFT.py  _SimulationData.py  _SnapshotBase.py  _SnapshotEAGLE.py  _SnapshotSWIFT.py  __init__.py  _builtin_simulation_types.py
src/contra/plotting/: __init__.py  _hexbin.py
