[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contra"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = ""
keywords = []
authors = [
  { name = "Christopher Rowe", email = "chris.rowe19@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "h5py",
  "pyread-eagle",
  "swiftsimio",
  "QuasarCode",
]

[project.urls]
Documentation = "https://github.com/QuasarX1/contra#readme"
Issues = "https://github.com/QuasarX1/contra/issues"
Source = "https://github.com/QuasarX1/contra"

[project.scripts]
contra = "contra._scripts.contra:main"
contra-setup = "contra._scripts.contra_setup:main"
contra-run = "contra._scripts.contra_run:main"

[tool.hatch.version]
path = "src/contra/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/contra tests}"

[tool.coverage.run]
source_pkgs = ["contra", "tests"]
branch = true
parallel = true
omit = [
  "src/contra/__about__.py",
]

[tool.coverage.paths]
contra = ["src/contra", "*/contra/src/contra"]
tests = ["tests", "*/contra/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
